(technical/mavenDependencyTree): add dependency tree plugin to work on dependency tree goal